<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/xxbig_margin"
        android:background="#ece8e1"
        tools:context=".fragments.info.support.CommunityCodeFragment">

        <ScrollView
            android:id="@+id/scrollCommunityCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/txtCommunityCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_community_code"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtCommunityCode1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/txt_community_code1"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode" />

                <TextView
                    android:id="@+id/txtCommunityCode2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code2"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode1" />

                <TextView
                    android:id="@+id/txtCommunityCode3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code3"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode2" />

                <TextView
                    android:id="@+id/txtCommunityCode4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code4"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode3" />

                <TextView
                    android:id="@+id/txtCommunityCode5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code5"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode4" />

                <TextView
                    android:id="@+id/txtCommunityCode6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code6"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode5" />

                <TextView
                    android:id="@+id/txtCommunityCode7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code7"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode6" />

                <TextView
                    android:id="@+id/txtCommunityCode8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code8"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode7" />

                <TextView
                    android:id="@+id/txtCommunityCode9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code9"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode8" />

                <TextView
                    android:id="@+id/txtCommunityCode10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code10"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode9" />

                <TextView
                    android:id="@+id/txtCommunityCode11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code11"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode10" />

                <TextView
                    android:id="@+id/txtCommunityCode12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code12"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode11" />

                <TextView
                    android:id="@+id/txtCommunityCode13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code13"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode12" />

                <TextView
                    android:id="@+id/txtCommunityCode14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code14"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode13" />

                <TextView
                    android:id="@+id/txtCommunityCode15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code15"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode14" />

                <TextView
                    android:id="@+id/txtCommunityCode16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code16"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode15" />

                <TextView
                    android:id="@+id/txtCommunityCode17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code17"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode16" />

                <TextView
                    android:id="@+id/txtCommunityCode18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code18"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode17" />

                <TextView
                    android:id="@+id/txtCommunityCode19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code19"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode18" />

                <TextView
                    android:id="@+id/txtCommunityCode20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code20"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode19" />

                <TextView
                    android:id="@+id/txtCommunityCode21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code21"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode20" />

                <TextView
                    android:id="@+id/txtCommunityCode22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code22"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode21" />

                <TextView
                    android:id="@+id/txtCommunityCode23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_community_code23"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode22" />

                <TextView
                    android:id="@+id/txtCommunityCode24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_community_code24"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode23" />

                <Space
                    android:id="@+id/spaceCommunityCode"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@id/txtCommunityCode24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>