<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/quiz_gradient_background"
        tools:context=".fragments.quiz.QuizFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/xxxsmall_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/text_color_quest_agents"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/text_color_quiz"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUsernameReg"
                enableError=""
                errorText=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/medium_margin"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/large_padding_left"
                    android:paddingTop="@dimen/xsmall_padding_top_bot"
                    android:paddingBottom="@dimen/xsmall_padding_top_bot" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/btnRadioAgents"
                    android:layout_width="@dimen/no_dimen"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/agents" />

                <RadioButton
                    android:id="@+id/btnRadioMaps"
                    android:layout_width="@dimen/no_dimen"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/maps" />

                <RadioButton
                    android:id="@+id/btnRadioWeapons"
                    android:layout_width="@dimen/no_dimen"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weapons" />
            </RadioGroup>

            <Button
                android:id="@+id/startGameBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/large_margin"
                android:layout_marginVertical="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:background="@drawable/custom_button"
                android:hint="@string/start_game"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>